--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -36,7 +36,8 @@
 @article{final_tagless_embedding,
  author = {Carette, Jacques and Kiselyov, Oleg and Shan, Chung-chieh},
  title = {{Finally Tagless, Partially Evaluated: Tagless Staged Interpreters for Simpler Typed Languages}},
- journal = {J. Funct. Program.},
+ shortjournal = {J. Funct. Program.},
+ journal = {Journal of Functional Programming},
  issue_date = {September 2009},
  volume = {19},
  number = {5},
@@ -48,7 +49,7 @@
  doi = {10.1017/S0956796809007205},
  acmid = {1630626},
  publisher = {Cambridge University Press},
- address = {New York, NY, USA},
+ OPTaddress = {New York, NY, USA},
 }
 
 @article{cotson,
@@ -87,7 +88,7 @@
 
 @inproceedings{house-,
  author = {Hallgren, Thomas and Jones, Mark P. and Leslie, Rebekah and Tolmach, Andrew},
- title = {{A Principled Approach to Operating System Construction in Haskell}},
+ title = {A Principled Approach to Operating System Construction in {Haskell}},
  booktitle = {Proceedings of ICFP '05},
  year = {2005},
  isbn = {1-59593-064-7},
@@ -103,7 +104,7 @@
 
 @article{house,
  author = {Hallgren, Thomas and Jones, Mark P. and Leslie, Rebekah and Tolmach, Andrew},
- title = {A principled approach to operating system construction in Haskell},
+ title = {A principled approach to operating system construction in {Haskell}},
  journal = {SIGPLAN Notices},
  issue_date = {September 2005},
  volume = {40},
