--- a/jabref.bib
+++ b/jabref.bib
@@ -3190,10 +3190,10 @@ publisher = theacm,
   booktitle = {Proceedings of POPL '96},
   year = {1996},
   pages = {295--308},
-  address = {New York, NY, USA},
+  OPTaddress = {New York, NY, USA},
   publisher = theacm,
-  optdoi = {http://doi.acm.org/10.1145/237721.237794},
-  xisbn = {0-89791-769-3},
+  doi = {10.1145/237721.237794},
+  isbn = {0-89791-769-3},
   optlocation = {Florida}
 }
 
@@ -8374,7 +8374,7 @@ year = {2000}
 @inproceedings{Hofer:2008:PED:1449913.1449935,
  author = {Hofer, Christian and Ostermann, Klaus and Rendel, Tillmann and Moors, Adriaan},
  title = {Polymorphic embedding of dsls},
- booktitle = {Proceedings of the 7th international conference on Generative programming and component engineering},
+ booktitle = {Proceedings of the 7\xth international conference on Generative programming and component engineering},
  series = {GPCE '08},
  year = {2008},
  isbn = {978-1-60558-267-2},
